Fixes layout issues created by the removal of the progress bar.

--- a/src/frontend/src/components/public/PPQConnect/PPQConnect.scss
+++ b/src/frontend/src/components/public/PPQConnect/PPQConnect.scss
@@ -1,3 +1,17 @@
+.background-connect {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  margin-inline: 0;
+  background-color: $ntrl-lightgray;
+
+  &.results-wrapper {
+    overflow-x: hidden;
+  }
+}
+
 .ppq-connect {
   background-color: white;
 
@@ -30,6 +44,6 @@
 
 .mpo-find-contact {
   & > a {
-    margin-left: .3em;
+    margin-left: 0.3em;
   }
 }
