--- a/src/frontend/src/pages/PPQFormPage/PPQFormPage.scss
+++ b/src/frontend/src/pages/PPQFormPage/PPQFormPage.scss
@@ -1,6 +1,8 @@
 .background {
+  display: flex;
+  align-items: center;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   margin-inline: 0;
   background-color: $ntrl-lightgray;
 
